tests/phase_00_lexer_errors/invalid/07_unicode_quotes.hulk
// El lexer debe rechazar comillas tipograficas si el lenguaje solo acepta comillas ASCII.
“hola”;
